--- a/PeterMac.Rmd
+++ b/PeterMac.Rmd
@@ -5,9 +5,9 @@ output:
   pdf_document: default
 ---
 
-#Introduction
 The contents of this workshop are adapted from the University of Cambirdge [Bioinformatics training](https://bioinfotraining.bio.cam.ac.uk/) workshop ["Data Manipulation and Visualisation using R"](http://bioinformatics-core-shared-training.github.io/r-intermediate/)
 
+#Introduction
 This section is on the R packages 'dplyr' and 'ggplot.' 
 
 Base R: We call R by itself (without adding any packages) 'base R'. It comes with a lot of functions but you can also add to these functions by installing packages. You can think of this as like installing apps on your phone - it adds extra functions.
@@ -30,7 +30,7 @@ To import the data:
 2. Import your data into R. 
 
 ```{r}
-patients <- read.csv("patients.txt")
+patients <- read.csv("patient-data-cleaned.txt")
 library(dplyr)
 library(ggplot2)
 ```
@@ -194,287 +194,565 @@ mean(a)
 
 ##Prepare data for ggplot
 For ggplot, we will use the original data we started with and add a BMI column to the end. We will use this dataframe to make plots with ggplot.
-```{r, echo=TRUE, eval=FALSE}
+```{r}
 patients <- patients %>%
   mutate(BMI = Weight/(Height/100)^2)
 ```
 
 #ggplot
-ggplot is one of the most popular packages in R. The default parameters usually make sense and the default graph is generally quite nice looking. 
+ggplot is one of the most popular packages in R and allows you to create good looking graphs easily. It builds on the concept of the “Grammar of Graphics” (Wilkinson 2005, Bertin 1983) which describes a consistent syntax for the construction of a wide range of complex graphics by a concise description of their components.
 
-Let's start with the basic anatomy of ggplot code - or how to you give R the instructions to make your plot. 
-First you must tell ggplot what data you want to plot. Then using the aes (which stands for "aesthetics"), you tell ggplot how to make your graph (i.e. what is on the x and y axis). Finally you tell ggplot what type of plot you want. Note the plus between ggplot and the geom 
+The structured syntax and high level of abstraction used by ggplot2 should allow for the user to concentrate on the visualisations instead of creating the underlying code.
 
-For example, let's make a scatter plot first. 
-We first tell ggplot that we want to plot the dataframe 'patients', that we want weight to be on the x axis and height on the y and that we want a scatter plot ('geom_point').
+On top of this central philosophy ggplot2 has:
+
+* Increased flexible over many plotting systems.
+* An advanced theme system for professional/publication level graphics.
+* Large developer base – Many libraries extending its flexibility.
+* Large user base – Great documentation and active mailing list.
+
+Let's start with the basic anatomy of ggplot code - or how to give R instructions to make your plot. 
+First you must tell ggplot what data you want to plot. 
+
+Here we are telling ggplot that we want to plot the dataframe patients:
 ```{r, echo=TRUE, eval=FALSE}
-library(ggplot2)
-ggplot(patients, aes(x=Weight, y=Height)) +
+ggplot(patients)
+```
+
+Now we must tell ggplot how to make the graph using aes ("aesthetics"). Here you map variables to aesthetics - i.e. what do you want on the x and y axis.
+```{r, echo=TRUE, eval=FALSE}
+ggplot(patients, aes(x=Height, y=Weight))
+```
+Depending on the type of graph, there are other aesthetics you can map variables to. Let's start with a scatter graph. Apart from x and y axes, you can also map variables to size of points, colour of points and shape of points. We can map each of these aesthetics to a variable:
+
+![](image/ggplot1)
+
+Finally, we must tell ggplot what kind of graph we want to make. To do this we simply 'add' a geom like so: 
+```{r}
+ggplot(patients, aes(x=Height, y=Weight)) +
   geom_point()
 ```
+geom_point is a scatter graph. Note the plus at the end of the first line - this is very important!
 
-For a scatter plot are a few other things that we can add to aes. This means that we can add extra variables to our scatter plot.
-They are size, shape and colour. 
+##Challenge: ggplot 1
 
-colour changes the colours of the points according to the Sex column of our dataframe.
-```{r}
-ggplot(patients, aes(x=Weight, y=Height, colour = Sex)) +
-  geom_point()
+Recreate the above plot
+
+##Geoms - Plot types
+
+The geom describes the type of plot used. Several geoms are available in ggplot2:
+
+* geom_point() - Scatter plots
+* geom_line() - Line plots
+* geom_smooth() - Fitted line plots
+* geom_bar() - Bar plots
+* geom_boxplot() - Boxplots
+* geom_jitter() - Jitter to plots
+* geom_histogram() - Histogram plots
+* geom_density() - Density plots
+* geom_text() - Text to plots
+* geom_errorbar() - Errorbars to plots
+* geom_violin() - Violin plots
+ 
+###Line plots
+
+```{r, line_simple}
+pcPlot <- ggplot(data=patients,
+        mapping=aes(x=Height,y=Weight))
+
+pcPlot_line <- pcPlot+geom_line() 
+
+pcPlot_line
+
 ```
 
-##Challenge: ggplot scatter plot
+```{r, smooth_simple}
+pcPlot <- ggplot(data=patients,
+        mapping=aes(x=Height,y=Weight))
 
-Recreate this plot:
-![](plots/)
+pcPlot_smooth <- pcPlot+geom_smooth() 
 
+pcPlot_smooth
 
-
-
-##Boxplot
-
-How would I make a boxplot of heights for each sex? 
-(draw on whiteboard)
-```{r}
-ggplot(patients, aes(y=Height, x= Sex)) +
-  geom_boxplot()
 ```
 
-If I also wanted the male and female box to be different coloured, I use fill - as in fill these in different colours.
+###Bar and frequency plots
 
-```{r}
-ggplot(patients, aes(y=Height, x= Sex, fill = Sex)) +
-  geom_boxplot()
+```{r, bar_simple}
+pcPlot <- ggplot(data=patients,
+        mapping=aes(x=Sex))
+
+pcPlot_bar <- pcPlot+geom_bar() 
+
+pcPlot_bar
 ```
 
-Why not use colour? Well weirdly, colour does something sligtly different.
-```{r}
-ggplot(patients, aes(y=Height, x= Sex, colour = Sex)) +
-  geom_boxplot()
-```
-It actually colours in the border whereas fill - fills in on the inside.
 
-You can also get a side-by-side plot using fill.
+```{r, histogram_simple}
+pcPlot <- ggplot(data=patients,
+        mapping=aes(x=Height))
 
-```{r}
-ggplot(patients, aes(y=Height, x= Sex, fill = Race)) +
-  geom_boxplot()
+pcPlot_hist <- pcPlot+geom_histogram() 
+
+pcPlot_hist
 ```
 
-##Violin plot
-A popular variation of the box plot is the violin plot. Instead of geom_boxplot, I put in geom_violin.
+```{r, density_simple}
+pcPlot <- ggplot(data=patients,
+        mapping=aes(x=Height))
 
-```{r}
-ggplot(patients, aes(y=Height, x= Sex, colour = Sex)) +
-  geom_violin()
+pcPlot_density <- pcPlot+geom_density() 
+
+pcPlot_density
+
 ```
 
-In a volin plot the width of the violin is proportion to the density of data - i.e. the width is small here thus there are few patients that are 170cm tall but here around 160 a lot of patients are this height.
+###Box and violin plots
 
-##Faceting
-Faceting splits your graph into separate panels of graphs.
+```{r, boxplot_simple}
+
+pcPlot <- ggplot(data=patients,
+        mapping=aes(x=Sex,y=Height))
+
+pcPlot_boxplot <- pcPlot+geom_boxplot() 
+
+pcPlot_boxplot
+```
+
+```{r, violin_simple}
+
+pcPlot <- ggplot(data=patients,
+        mapping=aes(x=Sex,y=Height))
+
+pcPlot_violin <- pcPlot+geom_violin() 
+
+pcPlot_violin
+```
+
+An overview of geoms and thier arguments can be found at ggplot2 documentation or within the ggplot2 cheatsheet.
+
+-[ggplot2 documentation](http://docs.ggplot2.org/current/)
+
+-[ggplot2 Cheatsheet](http://sape.inf.usi.ch/quick-reference/ggplot2/geom) 
+ 
+##Facets
+
+One very useful feature of ggplot is faceting. 
+This allows you to produce plots subset by variables in your data.
+
+To facet our data into multiple plots we can use the *facet_wrap* or *facet_grid* function specifying the variable we split by.
+
+The *facet_grid* function is well suited to splitting the data by two factors.
+
+Here we can plot the data with the Smokes variable as rows and Sex variable as columns.
+
+<div align="center">
+facet_grid(Rows~Columns)
+</div>
+
+```{r, facet_grid_SmokesBySex}
+pcPlot <- ggplot(data=patients,aes(x=Height,y=Weight,colour=Sex))+geom_point()
+pcPlot + facet_grid(Smokes~Sex)
+```
+
+To split by one factor we can apply the facet_grid() function ommiting the variable before the "~"" to facet along columns in plot.
+
+<div align="center">
+facet_grid(~Columns)
+</div> 
+```{r, facet_grid_BySex}
+pcPlot <- ggplot(data=patients,aes(x=Height,y=Weight,colour=Sex))+geom_point()
+pcPlot + facet_grid(~Sex)
+```
+
+To split along rows in plot, the variable is placed before the "~.".
+
+<div align="center">
+facet_grid(Rows~.)
+</div> 
+
+```{r, facet_grid_SexBy}
+pcPlot <- ggplot(data=patients,aes(x=Height,y=Weight,colour=Sex))+geom_point()
+pcPlot + facet_grid(Sex~.)
+```
+
+The *facet_wrap()* function offers a less grid based structure but is well suited to faceting data by one variable.
+
+For *facet_wrap()* we follow as similar syntax to *facet_grid()*
+
+```{r, facet_Wrap_BySmokes}
+pcPlot <- ggplot(data=patients,aes(x=Height,y=Weight,colour=Sex))+geom_point()
+pcPlot + facet_wrap(~Smokes)
+```
+
+For more complex faceting both *facet_grid* and *facet_wrap* can accept combinations of variables.
+
+Using *facet_wrap*
+```{r, facet_wrap_smokesBySexandPet}
+pcPlot <- ggplot(data=patients,aes(x=Height,y=Weight,colour=Sex))+geom_point()
+pcPlot + facet_wrap(~Pet+Smokes+Sex)
+```
+
+Or in a nice grid format using facet_grid() and the Smokes variable against a combination of Gender and Pet.
+
+```{r, facet_grid_smokesBySexandPet}
+pcPlot + facet_grid(Smokes~Sex+Pet)
+```
+
+## Adding titles for plot and labels.
+
+So far no plot titles have been specified. Plot titles can be specified using the labs functions.
+
+```{r, theme_labs}
+
+pcPlot <- ggplot(data=patients_clean,
+        mapping=aes(x=Weight,y=Height))+geom_point()
+pcPlot+labs(title="Weight vs Height",y="Height (cm)")
+```
+
+or specified using the ggtitle and xlab/ylab functions.
+
+```{r, theme_ggtitle}
+
+pcPlot <- ggplot(data=patients_clean,
+        mapping=aes(x=Height,y=Weight))+geom_point()
+pcPlot+ggtitle("Weight vs Height")+ylab("Height (cm)")
+```
+
+##Change the plotting order in a boxplot
+
+We will shortly discuss how to change various aspects of the plot layout and appearance. However, a common-asked question is how to change the order in which R plots a categorical variable. Consider the boxplot to compare weights of males and females:-
 
 ```{r}
-ggplot(patients, aes(x= Weight, y = Height)) +
+ggplot(patients, aes(x=Sex, y=Weight)) + geom_boxplot()
+```
+
+Here, R decides the order to arrange the boxes according to the `levels` of the categorical variable. By default this is the alphabetical order. i.e. Female before Male.
+
+```{r}
+patients$Sex
+```
+
+Depending on the message we want the plot to convey, we might want control over the order of boxes. The `factor` functions allows us to explictly change the order of the levels.
+
+```{r}
+factor(patients$Sex,levels=c("Male","Female"))
+```
+
+With the pipe syntax we just learnt about, we can change the variable on-the-fly and generate the plot 
+
+```{r}
+patients %>% 
+  mutate(Sex = factor(Sex,levels=c("Male","Female"))) %>% 
+  ggplot(aes(x=Sex, y=Weight)) + geom_boxplot()
+```
+
+
+## Scales
+
+Scales and their legends have so far been handled using ggplot2 defaults.
+ggplot2 offers functionality to have finer control over scales and legends using the *scale* methods.
+
+Scale methods are divided into functions by combinations of 
+
+* the aesthetics they control.
+
+* the type of data mapped to scale.
+
+ 
+  scale_**aesthetic**_**type**
+  
+  Try typing in scale_ then *tab* to autocomplete. This will provide some examples of the scale functions available in ggplot2.
+
+Although different *scale* functions accept some variety in their arguments, common arguments to scale functions include - 
+
+- name - The axis or legend title
+
+- limits - Minimum and maximum of the scale
+
+- breaks - Label/tick positions along an axis
+
+- labels - Label names at each break
+
+
+## Controlling the X and Y scale.
+
+Both continous and discrete X/Y scales can be controlled in ggplot2 using the
+
+scale_**(x/y)**_**(continous/discrete)**
+
+
+In this example we control the continuous sale on the x-axis by providing a name, X-axis limits, the positions of breaks (ticks/labels) and the  labels to place at breaks.
+
+```{r, facet_grid_smokesBySex_scalex}
+
+pcPlot +
   geom_point() +
-  facet_grid(Smokes~Sex)
-```
-What happens if I switch smokes and sex around?
-
-
-***
-Challenge
-***
-
-##Bar plots
-Bar plots are pretty popular.
-
-I want a bar plot of mean heights for each race. What I need to do is to calculate the mean height for each race - I want a dataframe that looks like this.
-
-We can do this using dplyr - does anyone remember how? What functions do we use?
-
-```{r}
-patients %>%
-  group_by(Race) %>%
-  summarise(mean_height = mean(Height))
-```
-
-Now I want to plot this on a bar plot. Remember that I said these 2 packages work well together? Well you can directly 'pipe' this data to ggplot! 
-This actually makes your work less messy - you don't have to save it as a variable first - remember last week when we often ended up saving many many variables - patients_smokes, patients_females, patients_smokes_females.
-
-So now we don't have to tell ggplot what data do use - because the data is being piped in from here. The rest of the command is the same. How would I make a bar plot like this?
-Remember in dplyr we use the %>% and in ggplot we change to + - watch out for this!
-
-```{r, eval=FALSE, echo=TRUE}
-patients %>%
-  group_by(Race) %>%
-  summarise(mean_height = mean(Height)) %>%
-  ggplot(aes(y=mean_height, x= Race)) +
-  geom_bar()
-```
-We have an error! The message is pretty cryptic.
-
-The reason is easier to understand if I show you a barplot that doesn't give an error.
-
-```{r}
-ggplot(patients, aes(x=Height)) +
-  geom_bar()
-```
-What has it plotted? 
-y = number of patients that had a height of 157, 158..  
-What this function has done, is automatically counted how many houses/rows have 1 bd, 2 bd...  
-Notice how we only gave it 1 variable - because it's just counting up how many times there is a 1 bd house and putting the count herre - in the y axis.  
-Lets look at our previous data again. We are not plotting how many - we want it to plot actually this number here. We can tell it to do so with stat = "identity"
-
-```{r}
-patients %>%
-  group_by(Race) %>%
-  summarise(mean_height = mean(Height)) %>%
-  ggplot(aes(y=mean_height, x= Race)) +
-  geom_bar(stat = 'identity')
+  facet_grid(Smokes~Sex)+
+  scale_x_continuous(name="height ('cm')",
+                     limits = c(100,200),
+                     breaks=c(125,150,175),
+                     labels=c("small","justright","tall"))
 
 ```
 
-***
-Challenge
-***
+Similary control over discrete scales is shown below.
 
-```{r}
-patients %>%
-  group_by(Race, Sex) %>%
-  summarise(mean_height = mean(Height)) %>%
-  ggplot(aes(y=mean_height, x= Race, fill=Sex)) +
-  geom_bar(stat = 'identity', position = 'dodge')
+```{r, facet_grid_smokesBySex_scaleDisceteX}
+pcPlot <- ggplot(data=patients,aes(x=Sex,y=Height))
+pcPlot +
+  geom_violin(aes(x=Sex,y=Height)) +
+  scale_x_discrete(labels=c("Women", "Men"))
+
+```
+
+Multiple X/Y scales can be combined to give full control of axis marks.
+
+```{r, facet_grid_smokesBySex_scaleDisceteXContinuousY}
+pcPlot <- ggplot(data=patients,aes(x=Sex,y=Height,fill=Smokes))
+pcPlot +
+  geom_violin(aes(x=Sex,y=Height)) +
+  scale_x_discrete(labels=c("Women", "Men"))+
+  scale_y_continuous(breaks=c(160,180),labels=c("Short", "Tall"))
+```
+
+## Controlling other scales.
+
+When using fill,colour,linetype, shape, size or alpha aesthetic mappings the scales are automatically selected for you and the appropriate legends created.
+
+```{r, facet_grid_height_weight}
+pcPlot <- ggplot(data=patients,
+                 aes(x=Height,y=Weight,colour=Sex))
+pcPlot + geom_point(size=4)
+                  
+```
+
+In the above example the discrete colours for the Sex variable was selected by default.
+
+### Manual discrete colour scale
+
+Manual control of discrete variables can be performed using scale_*aes_Of_Interest*_**manual** with the *values* parameter.
+Additionally in this example an updated name for the legend is provided.
+
+```{r, facet_grid_height_weight_manualScale}
+pcPlot <- ggplot(data=patients,
+                 aes(x=Height,y=Weight,colour=Sex))
+pcPlot + geom_point(size=4) + 
+  scale_color_manual(values = c("Green","Purple"),
+                     name="Gender")
+                  
+```
+
+###Colorbrewer for discrete colour scale
+
+Here we have specified the colours to be used (hence the manual) but when the number of levels to a variable are high this may be impractical and often we would like ggplot2 to choose colours from a scale of our choice.
+
+The brewer set of scale functions allow the user to make use of a range of palettes available from colorbrewer.
+
+- **Diverging**
+
+ *BrBG, PiYG, PRGn, PuOr, RdBu, RdGy, RdYlBu, RdYlGn, Spectral*
+
+- **Qualitative**
+
+ *Accent, Dark2, Paired, Pastel1, Pastel2, Set1, Set2, Set3*
+
+- **Sequential**
+
+ *Blues, BuGn, BuPu, GnBu, Greens, Greys, Oranges, OrRd, PuBu, PuBuGn, PuRd, Purples, RdPu, Reds, YlGn, YlGnBu, YlOrBr, YlOrRd*
+
+
+```{r, facet_grid_height_weight_brewerScale}
+pcPlot <- ggplot(data=patients,
+                 aes(x=Height,y=Weight,colour=Pet))
+pcPlot + geom_point(size=4) + 
+  scale_color_brewer(palette = "Set2")
+                  
+```
+
+For more details on palette sizes and styles visit the colorbrewer website and ggplot2 reference page.
+
+- [colorbrewer](http://colorbrewer2.org/)
+
+- [ggplot2 colour scales](http://docs.ggplot2.org/current/scale_brewer.html)
+
+###Continuous colour scales
+
+So far we have looked a qualitative scales but ggplot2 offers much functionality for continuous scales such as for size, alpha (transparancy), colour and fill.
+
+- scale_alpha_continuous() - For Transparancy
+
+- scale_size_continuous() - For control of size.
+
+
+Both these functions accept the range of alpha/size to be used in plotting.
+
+Below the range of alpha to be used in plot is limited to between 0.5 and 1
+
+```{r, facet_grid_height_weight_BMIalpha}
+pcPlot <- ggplot(data=patients,
+                 aes(x=Height,y=Weight,alpha=BMI))
+pcPlot + geom_point(size=4) + 
+  scale_alpha_continuous(range = c(0.5,1))
+                  
+```
+
+Below the range of sizes to be used in plot is limited to between 3 and 6
+```{r, facet_grid_height_weight_BMIsize}
+pcPlot <- ggplot(data=patients,
+                 aes(x=Height,y=Weight,size=BMI))
+pcPlot + geom_point(alpha=0.8) + 
+  scale_size_continuous(range = c(3,6))
+                  
+```
+
+The limits of the scale can also be controlled but it is important to note data outside of scale is removed from plot.
+
+```{r, facet_grid_height_weight_BMIsizeLimits}
+pcPlot <- ggplot(data=patients,
+                 aes(x=Height,y=Weight,size=BMI))
+pcPlot + geom_point() + scale_size_continuous(range = c(3,6), limits = c(25,40))
+                  
 ```
 
 
-##Modifying your plot
+What points of scale to be labeled and labels text  can also be controlled.
 
-Adding labels and changing colours
-
-```{r}
-patients %>%
-  group_by(Race, Sex) %>%
-  summarise(mean_height = mean(Height)) %>%
-  ggplot(aes(y=mean_height, x= Race, fill=Sex)) +
-  geom_bar(stat = 'identity', position = 'dodge') + 
-  labs(title = 'Mean height by Race and Sex', y= "Mean Height") +
-  theme(plot.title = element_text(hjust = 0.5)) +
-  scale_fill_manual(values = c("gold", "darkblue"), name = 'gender', labels = c('women', 'men')) +
-  theme_bw()
+```{r, facet_grid_height_weight_BMIsizewithBreaks}
+pcPlot <- ggplot(data=patients,
+                 aes(x=Height,y=Weight,size=BMI))
+pcPlot + geom_point() + 
+  scale_size_continuous(range = c(3,6), 
+                        breaks=c(25,30), 
+                        labels=c("Good","Good but not 25"))
 ```
 
-You can also add THEMES!
 
-##Saving plots
-There are 2 ways to save plots. Via Export > save as image.
+Control of colour/fill scales can be best achieved through the **gradient** subfunctions of scale.
 
-Or using code. 
-Change to .pdf or .png for the type of plot you want.
+- scale_(colour/fill)_*gradient* - 2 colour gradient (eg. low to high BMI)
 
-```{r, eval=FALSE, echo=TRUE}
-pdf("myPlot.pdf", width = 10, height = 8, units = "px")
+- scale_(colour/fill)_*gradient2* - Diverging colour scale with a midpoint colour (e.g. Down, No Change, Up)
 
-#bmp()
-#jpeg()
-#png()
+Both functions take a common set of arguments:-
 
+- low - Colour for low end of gradient scale
+- high - Colour for high end of gradient scale.
+- na.value - Colour for any NA values.
 
-#make your plot here
-patients %>%
-  group_by(Race, Sex) %>%
-  summarise(mean_height = mean(Height)) %>%
-  ggplot(aes(y=mean_height, x= Race, fill=Sex)) +
-  geom_bar(stat = 'identity', position = 'dodge') + 
-  labs(title = 'Mean height by Race and Sex', y= "Mean Height") +
-  theme(plot.title = element_text(hjust = 0.5)) +
-  scale_fill_manual(values = c("gold", "darkblue"))
+An example using scale_colour_gradient below sets the low and high end colours to White and Red respectively
 
-dev.off
-```
-This way is much easier if you are making several plots - you don't have to click through and save every plot. 
-
-***
-Challenge: Save your plot and then do challenge 8.
-***
-
-##Scales
-
-The last thing we will cover is scales - changing the axis.
-
-###Discrete axis
-
-So here we have a discrete axis - they are categories.
-```{r}
-patients %>%
-  group_by(Race, Sex) %>%
-  summarise(mean_height = mean(Height)) %>%
-  ggplot(aes(y=mean_height, x= Race, fill=Sex)) +
-  geom_bar(stat = 'identity', position = 'dodge') + 
-  labs(title = 'Mean height by Race and Sex', y= "Mean Height") +
-  theme(plot.title = element_text(hjust = 0.5)) +
-  scale_fill_manual(values = c("gold", "darkblue")) +
-  scale_x_discrete(limit = c("Black", "Asian"))
+```{r, facet_grid_height_weight_BMIgradient}
+pcPlot <- ggplot(data=patients,
+                 aes(x=Height,y=Weight,colour=BMI))
+pcPlot + geom_point(size=4,alpha=0.8) + 
+  scale_colour_gradient(low = "White",high="Red")
+                  
 ```
 
-You can also control what order they appear in. 
+Similarly we can use the scale_colour_gradient2 function which allows for the specification of a midpoint value and its associated colour.
 
-You can also change the names.
-```{r}
-patients %>%
-  group_by(Race, Sex) %>%
-  summarise(mean_height = mean(Height)) %>%
-  ggplot(aes(y=mean_height, x= Race, fill=Sex)) +
-  geom_bar(stat = 'identity', position = 'dodge') + 
-  labs(title = 'Mean height by Race and Sex', y= "Mean Height") +
-  theme(plot.title = element_text(hjust = 0.5)) +
-  scale_fill_manual(values = c("gold", "darkblue"))+
-  scale_x_discrete(limit = c("Black", "Asian"), labels = c("Afican American", 'Asian'))
+```{r, facet_grid_height_weight_BMIgradient2}
+pcPlot <- ggplot(data=patients,
+                 aes(x=Height,y=Weight,colour=BMI))
+pcPlot + geom_point(size=4,alpha=0.8) + 
+  scale_colour_gradient2(low = "Blue",mid="Black", high="Red", midpoint = median(patients$BMI))
 ```
 
-###Continuous axis
-The y axis here is continuous.
+As with previous continous scales, limits and custom labels in scale legend can be added.
 
-You can change the 'breaks'.
-```{r}
-patients %>%
-  group_by(Race, Sex) %>%
-  summarise(mean_height = mean(Height)) %>%
-  ggplot(aes(y=mean_height, x= Race, fill=Sex)) +
-  geom_bar(stat = 'identity', position = 'dodge') + 
-  labs(title = 'Mean height by Race and Sex', y= "Mean Height") +
-  theme(plot.title = element_text(hjust = 0.5)) +
-  scale_fill_manual(values = c("gold", "darkblue")) +
-  scale_x_discrete(limit = c("Black", "Asian"), labels = c("Afican American", 'Asian')) +
-  scale_y_continuous(breaks = c(50,100,150))
+```{r, facet_grid_height_weight_BMIgradient2plus}
+pcPlot <- ggplot(data=patients,
+                 aes(x=Height,y=Weight,colour=BMI))
+pcPlot + geom_point(size=4,alpha=0.8) + 
+  scale_colour_gradient2(low = "Blue",
+                         mid="Black",
+                         high="Red",
+                         midpoint = median(patients$BMI),
+                         breaks=c(25,30),labels=c("Low","High"),
+                         name="Body Mass Index")
 ```
 
-You can also change the labels - it doesn't make sense to do so here but just for demonstration.
-```{r}
-patients %>%
-  group_by(Race, Sex) %>%
-  summarise(mean_height = mean(Height)) %>%
-  ggplot(aes(y=mean_height, x= Race, fill=Sex)) +
-  geom_bar(stat = 'identity', position = 'dodge') + 
-  labs(title = 'Mean height by Race and Sex', y= "Mean Height") +
-  theme(plot.title = element_text(hjust = 0.5)) +
-  scale_fill_manual(values = c("gold", "darkblue")) +
-  scale_x_discrete(limit = c("Black", "Asian"), labels = c("Afican American", 'Asian')) +
-  scale_y_continuous(breaks = c(50,100,150), labels = c('short', 'medium', 'tall'))
+Multiple scales may be combined to create high customisable plots and scales
+
+```{r, facet_grid_smokesBySex_scaleDisceteXContinuouswY}
+pcPlot <- ggplot(data=patients,
+                 aes(x=Height,y=Weight,colour=BMI,shape=Sex))
+pcPlot + geom_point(size=4,alpha=0.8)+ 
+  scale_shape_discrete(name="Gender") +
+  scale_colour_gradient2(low = "Blue",mid="Black",high="Red",
+                         midpoint = median(patients$BMI),
+                         breaks=c(25,30),labels=c("Low","High"),
+                         name="Body Mass Index")
 ```
 
-***
-Challenge 9
-***
+
+##Statistical transformations.
+
+In ggplot2 many of the statistical transformations are performed without any direct specification e.g. geom_histogram() will use stat_bin() function to generate bin counts to be used in plot.
+
+An example of statistical methods in ggplot2 which are very useful include the stat_smooth() and stat_summary() functions.
 
 
-```{r}
-ggplot(patients, aes(y=BMI, x = Sex, fill = Smokes)) +
-  geom_violin() +
-  labs(title = 'BMI by sex and smoking status') +
-  theme(plot.title = element_text(hjust = 0.5)) +
-   scale_fill_manual(values = c("purple", "gold"), name = 'Smoking status', label = c("Non-smoker", 'Smoker'))
+The stat_smooth() function can be used to fit a line to the data being displayed.
 
+```{r, stat_smooth}
+pcPlot <- ggplot(data=patients,
+        mapping=aes(x=Weight,y=Height))
+pcPlot+geom_point()+stat_smooth()
 ```
+
+By default a "loess" smooth line is plotted by stat_smooth. Other methods available include lm, glm,gam,rlm.
+
+```{r, stat_smoothlm}
+pcPlot <- ggplot(data=patients,
+        mapping=aes(x=Weight,y=Height))
+pcPlot+geom_point()+stat_smooth(method="lm")
+```
+
+A useful feature of ggplot2 is that it uses previously defined grouping when performing smoothing.
+
+If colour by Sex is an aesthetic mapping then two smooth lines are drawn, one for each sex.
+
+```{r, stat_smoothlmgroups}
+pcPlot <- ggplot(data=patients,
+        mapping=aes(x=Weight,y=Height,colour=Sex))
+pcPlot+geom_point()+stat_smooth(method="lm")
+```
+
+This behaviour can be overridden by specifying an aes within the stat_smooth() function and setting inherit.aes to FALSE.
+
+```{r, stat_smoothlmgroupsOverridden}
+pcPlot <- ggplot(data=patients,
+        mapping=aes(x=Weight,y=Height,colour=Sex))
+pcPlot+geom_point()+stat_smooth(aes(x=Weight,y=Height),method="lm",inherit.aes = F)
+```
+
+Another useful method is stat_summary() which allows for a custom statistical function to be performed and then visualised.
+
+The fun.y parameter specifies a function to apply to the y variables for every value of x.
+
+In this example we use it to plot the quantiles of the Female and Male Height data
+
+```{r, stat_summary}
+pcPlot <- ggplot(data=patients,
+        mapping=aes(x=Sex,y=Height))+geom_jitter()
+pcPlot+stat_summary(fun.y=quantile,geom="point",colour="purple",size=8)
+``` 
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
